# paper-loop

./: .gitignore  AGENTS.md  CLAUDE.md  PRIVACY.md  README.md  justfile
backend/: main.py  pyproject.toml  pyrightconfig.json
backend/prompts/: extract.py
backend/services/: arxiv.py  card_pipeline.py  extractor.py  llm_filter.py  pdf_parser.py
backend/src/: main.py
backend/src/services/: card_pipeline.py  extractor.py  llm_filter.py
docs/: paper_vocab_iphone_mvp_v2.html  paperloop_agent_prompt.md
openspec/changes/client-side-pipeline/: design.md  proposal.md
openspec/changes/improve-quality/: design.md  proposal.md
openspec/changes/paperloop-mvp/: design.md  proposal.md  tasks.md
openspec/specs/card-introduction-queue/: spec.md
openspec/specs/llm-card-generation/: spec.md
openspec/specs/occurrence-model/: spec.md
openspec/specs/paper-import/: spec.md
openspec/specs/paper-management/: spec.md
openspec/specs/review-loop/: spec.md
openspec/specs/vocab-alphabet-index/: spec.md
paper-loop/paper-loop/: ContentView.swift  InfoPlist.xcstrings  Localizable.xcstrings  Theme.swift  paper_loopApp.swift
paper-loop/paper-loop.xcodeproj/: project.pbxproj
paper-loop/paper-loop/Models/: AnchorData.swift  Card.swift  Occurrence.swift  Paper.swift  ReviewLog.swift
paper-loop/paper-loop/Services/: ArXivFetchService.swift  CardIntroductionService.swift  CardPipeline.swift  DoubaoTTSService.swift  ImportService.swift  KeychainHelper.swift  LLMService.swift  ReviewScheduler.swift
paper-loop/paper-loop/Views/: HTMLReaderView.swift  ImportView.swift  (+7 more)
(+28 files in other folders)
