[project]
name = "paper-loop-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.24.0",
    "spacy>=3.7.0",
    "openai>=1.30.0",
    "rake-nltk>=1.0.6",
    "python-dotenv>=1.2.2",
]
